--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
       margin-top: 20px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KTJVW0VSXY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KTJVW0VSXY');
+</script>
 </head>
 <body>
   <div class="start-button" id="startButton" onclick="startQuiz()">Почати перевтілення</div> 
